--- a/findly-builder/src/app/components/business-rules/business-rules.component.scss
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.scss
@@ -269,12 +269,18 @@
                     overflow: hidden;
                     text-overflow: ellipsis;
                     white-space: nowrap;
-                    max-width: 130px;
+                    max-width: 150px;
                     margin: 0 5px 5px 0 !important;
                     height: 18px;
                     .small-text {
                         color: #BDC1C6;
                     }
+                }
+                .outcome-tags-input{
+                    overflow: initial !important;
+                    white-space: normal !important;
+                    height: auto !important;
+                    word-break: break-all !important;
                 }
                 .divider {
                     font-weight: 500;
