--- a/findly-builder/src/app/components/search-interface/search-interface.component.html
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.html
@@ -1170,35 +1170,75 @@
           <!-- Carousel UI Template Start-->
           <div class="result-right-sec" *ngIf="customizeTemplateObj.template.searchResultlayout.layout == 'tileWithText' && customizeTemplateObj.template.type == 'Carousel'">
             <div class="carousel" id="carousel-default">
-              <div class="slide tile_with_header grid_view_template">
-                <a class="tile-title">Check account statement</a>
-              </div>
-              <div class="slide tile_with_header grid_view_template">
-                <a class="tile-title">Speak to an agent</a>
-              </div>
-              <div class="slide tile_with_header grid_view_template">
-                <a class="tile-title">Check credit card eligibility</a>
-              </div>
-              <div class="slide tile_with_header grid_view_template">
-                <a class="tile-title">Last 30 days transaction</a>    
-              </div>
+              <div class="slide">
+                <div class="tile_with_header">
+                  <a class="tile-title">Check account statement</a>
+                </div>
+              </div>    
+              <div class="slide">
+                <div class="tile_with_header">
+                  <a class="tile-title">Speak to an agent</a>
+                </div>
+              </div>  
+              <div class="slide">
+                <div class="tile_with_header">
+                  <a class="tile-title">Check credit card eligibility</a>
+                </div>
+              </div>    
+              <div class="slide">
+                <div class="tile_with_header">
+                  <a class="tile-title">Last 30 days transaction</a>    
+                </div>
+              </div>                                              
             </div>
           </div>
 
-          <div class="result-right-sec" *ngIf="customizeTemplateObj.template.searchResultlayout.layout == 'tileWithImage' && customizeTemplateObj.template.type == 'Carousel'">
+          <div class="result-right-sec with-image image-tmplate-type-1" *ngIf="customizeTemplateObj.template.searchResultlayout.layout == 'tileWithImage' && customizeTemplateObj.template.type == 'Carousel'">
             <div class="carousel" id="carousel-default">
-              <div class="slide tile_with_header grid_view_template">
-                <a class="tile-title">Check account statement</a>
+              <div class="slide">
+                <div class="result-card">
+                  <div class="d-flex align-items-center">
+                    <div class="img-block"><img src="assets/icons/search-interface/dummy-img.svg"></div>
+                    <div class="content-sec">
+                      <div class="r-title">{{preview_title}}</div>
+                      <div class="r-desc text-truncate">{{preview_desc}}</div>                    
+                    </div>
+                  </div>                  
+                </div>
+              </div>    
+              <div class="slide">
+                <div class="result-card">
+                  <div class="d-flex align-items-center">
+                    <div class="img-block"><img src="assets/icons/search-interface/dummy-img.svg"></div>
+                    <div class="content-sec">
+                      <div class="r-title">{{preview_title}}</div>
+                      <div class="r-desc text-truncate">{{preview_desc}}</div>                    
+                    </div>
+                  </div>                  
+                </div>
               </div>
-              <div class="slide tile_with_header grid_view_template">
-                <a class="tile-title">Speak to an agent</a>
-              </div>
-              <div class="slide tile_with_header grid_view_template">
-                <a class="tile-title">Check credit card eligibility</a>
-              </div>
-              <div class="slide tile_with_header grid_view_template">
-                <a class="tile-title">Last 30 days transaction</a>    
-              </div>
+              <div class="slide">
+                <div class="result-card">
+                  <div class="d-flex align-items-center">
+                    <div class="img-block"><img src="assets/icons/search-interface/dummy-img.svg"></div>
+                    <div class="content-sec">
+                      <div class="r-title">{{preview_title}}</div>
+                      <div class="r-desc text-truncate">{{preview_desc}}</div>                    
+                    </div>
+                  </div>                  
+                </div>
+              </div>    
+              <div class="slide">
+                <div class="result-card">
+                  <div class="d-flex align-items-center">
+                    <div class="img-block"><img src="assets/icons/search-interface/dummy-img.svg"></div>
+                    <div class="content-sec">
+                      <div class="r-title">{{preview_title}}</div>
+                      <div class="r-desc text-truncate">{{preview_desc}}</div>                    
+                    </div>
+                  </div>                  
+                </div>
+              </div>             
             </div>
           </div>
 
