--- a/findly-builder/src/app/components/facets/facets.component.scss
+++ b/findly-builder/src/app/components/facets/facets.component.scss
@@ -770,3 +770,8 @@
         }
     }
 }
+
+::ng-deep .my-custom-warning-class .tooltip-inner {
+    max-width: 235px !important;
+    text-align: left !important;
+  }
