FLY-1142 Fields: Unchecked indexed property warning message, which is displayed in weights, facets, Rules is not matching with figma screen issue fixed

--- a/findly-builder/src/app/components/business-rules/business-rules.component.scss
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.scss
@@ -767,3 +767,7 @@
     max-width: 235px !important;
     text-align: left !important;
   }
+
+  ::ng-deep .text-left-warning .tooltip-inner {
+    text-align: left !important;
+  }
