--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -172,7 +172,7 @@
                                     <label for="{{facet._id}}" class="checkbox-custom-label"></label>
                                 </div>
                                 <div class="title text-truncate" >
-                                    <img class="pr-1" *ngIf="facet.showFieldWarning && (facet.showFieldWarning !== 'false')" src="assets/icons/info-blue.svg" placement="left" tooltipClass="{{modifyFieldWarningMsg(facet.showFieldWarning)?'my-custom-warning-class':''}}" container="body" ngbTooltip='{{fieldWarnings[facet.showFieldWarning] || facet.showFieldWarning}}' ><span title="{{facet.facetName}}"> {{facet.facetName}} </span>                              
+                                    <img class="pr-1" *ngIf="facet.showFieldWarning && (facet.showFieldWarning !== 'false')" src="assets/icons/info-blue.svg" placement="left" tooltipClass="{{modifyFieldWarningMsg(facet.showFieldWarning)?'my-custom-warning-class':'text-left-warning'}}" container="body" ngbTooltip='{{fieldWarnings[facet.showFieldWarning] || facet.showFieldWarning}}' ><span title="{{facet.facetName}}"> {{facet.facetName}} </span>                              
                                 </div>
                             </div>
                             <div class="col-2 content pl-pr-17">{{facet.facetType | translate}}</div>
@@ -238,12 +238,12 @@
                                 </perfect-scrollbar>
                             </ul>
                         </div>
-                        <div class="kr-sg-inline-notification" *ngIf="selectedFieldId === selectedField?.fieldId && addEditFacetObj?.showFieldWarning && addEditFacetObj?.showFieldWarning === 'NOT_INDEXED'">
-                            <div class="bulb-icon"><img src="assets/icons/info-blue.svg"></div>
+                        <div class="mt-2 kr-sg-inline-notification" *ngIf="selectedFieldId === selectedField?.fieldId && addEditFacetObj?.showFieldWarning && addEditFacetObj?.showFieldWarning === 'NOT_INDEXED'">
+                            <div class="mr-1"><img src="assets/icons/info-blue.svg"></div>
                             <div class="tost-text">{{selectedField.fieldName}} is not indexed</div>
                         </div>
                         <div class="kr-sg-inline-notification" *ngIf="selectedFieldId === selectedField?.fieldId && addEditFacetObj?.showFieldWarning && addEditFacetObj?.showFieldWarning === 'CHANGE_IN_TYPE'">
-                            <div class="bulb-icon"><img src="assets/icons/info-blue.svg"></div>
+                            <div class="mr-1"><img src="assets/icons/info-blue.svg"></div>
                             <div class="tost-text">The Field type has been changed</div>
                         </div>
                     </div>
