--- a/findly-builder/src/app/components/facets/facets.component.scss
+++ b/findly-builder/src/app/components/facets/facets.component.scss
@@ -775,3 +775,7 @@
     max-width: 235px !important;
     text-align: left !important;
   }
+  
+  ::ng-deep .text-left-warning .tooltip-inner {
+    text-align: left !important;
+  }
