--- a/findly-builder/src/app/components/weights/weights.component.html
+++ b/findly-builder/src/app/components/weights/weights.component.html
@@ -34,7 +34,7 @@
                         <div class="col-6 desc text-truncate">
                             <span *ngIf="currentEditIndex !== i">{{weightModal.desc}}</span>
                             <div class="kr-sg-input-text-area" *ngIf="currentEditIndex === i">
-                                <textarea [(ngModel)]="weightModal.desc" (keyup)="disableCancle = false" placeholder="Short Description" class="input-text weighDesc"></textarea>
+                                <textarea [(ngModel)]="weightModal.desc" (keyup)="disableCancle = false" placeholder="Short Description" class="input-text weighDesc" maxlength="250"></textarea>
                             </div>
                         </div>
                         <div class="col-4 sliderContainer">
@@ -78,7 +78,7 @@
                     <div class="kr-sg-dropdowns col-12 p-0" [ngClass]="{'disabled': addEditWeighObj._id}">
                         <div class="kr-sg-input-search dropdown dropdown-open line-height-0">
                             <button class="dropdown-toggle dropdown-input search-with-dropdown" data-toggle="dropdown"></button>
-                            <input [class.err-block]="((!addEditWeighObj.fieldName || !addEditWeighObj.fieldName.length) && submitted)" type="text" placeholder="Search For Field" class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown" [ngClass]="{'pl-33':!addEditWeighObj.fieldName}" (keyup)="getFieldAutoComplete(addEditWeighObj.fieldName)" [(ngModel)]="addEditWeighObj.fieldName">
+                            <input [class.err-block]="((!addEditWeighObj.fieldName || !addEditWeighObj.fieldName.length) && submitted)" type="text" placeholder="Search For Field" class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown" [ngClass]="{'pl-33':!addEditWeighObj.fieldName}" (keyup)="getFieldAutoComplete(addEditWeighObj.fieldName)" [(ngModel)]="addEditWeighObj.fieldName" maxlength="60">
                             <img *ngIf="(!addEditWeighObj.fieldName || !addEditWeighObj.fieldName.length) && submitted" id="weightNameWarning" src="assets/icons/warning_escalation.svg" style="top: 29%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
                             <!-- <input type="text" placeholder="Search For Field" class="input-search dropdown-toggle dropdown-input" [ngClass]="{'pl-33':!addEditWeighObj.fieldName}" (keyup)="getFieldAutoComplete(addEditWeighObj.fieldName)" [(ngModel)]="addEditWeighObj.fieldName" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                                 (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'"> -->
@@ -103,11 +103,11 @@
             </div>
             <div class="kr-sg-input-text mb-25" *ngIf="addEditWeighObj._id" [ngClass]="{'disabled': addEditWeighObj._id}">
                 <div class="label-text">{{'weights.weight_name'| translate}}</div>
-                <input type="text" id="input_weightsName" [(ngModel)]="addEditWeighObj.name" placeholder="Placeholder text" class="input-text">
+                <input type="text" id="input_weightsName" maxlength="60" [(ngModel)]="addEditWeighObj.name" placeholder="Placeholder text" class="input-text">
             </div>
             <div class="kr-sg-input-text-area mb-25">
                 <div class="label-text">{{'weights.description'| translate}}</div>
-                <textarea id="input_weightsDesc" [(ngModel)]="addEditWeighObj.desc" placeholder="Short Description" class="input-text"></textarea>
+                <textarea id="input_weightsDesc" [(ngModel)]="addEditWeighObj.desc" maxlength="250" placeholder="Short Description" class="input-text"></textarea>
             </div>
             <div class="kr-sg-input-text">
                 <div class="label-text">{{'weights.set_weight'| translate}}</div>
